--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <build_depend>control_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>actionlib</exec_depend>
@@ -32,6 +33,7 @@
   <exec_depend>trajectory_msgs</exec_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>message_generation</exec_depend>
   
   <build_export_depend>dynamic_reconfigure</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
